[project]
name = "assignment1"
version = "0.1.0"
description = ""
authors = [
    {name = "Seongwon Yun"}
]
readme = "README.md"
requires-python = ">=3.8,<3.9"
dependencies = [
    "networkx (==3.1)",
    "notebook (==7.2.2)",
    "numpy (==1.24.3)",
    "scikit-learn (==1.3.0)",
    "scipy (==1.10.1)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
